WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2023-04-16 Giovanni Bechis <g.bechis@snb.it>

	* add email_is_blacklisted to check an email address against an
	hashbl rbl server

2023-03-31 Giovanni Bechis <g.bechis@snb.it>

	* UTF-8 support improvements

2023-02-07 Giovanni Bechis <gbechis@pccc.com>

	* Authentication-Results header improvements

2023-01-16 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.3 RELEASED

2023-01-10 Giovanni Bechis <gbechis@pccc.com>

	* add UTF-8 support to md_graphdefang_log

2022-11-24 Giovanni Bechis <g.bechis@snb.it>

	* add a gen_mx_id Perl implementation, needed for OpenSMTPd support

2022-10-21 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.2 RELEASED

2022-09-26 Giovanni Bechis <g.bechis@snb.it>

	* make graphdefang compatible with current php versions

2022-08-24 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.1 RELEASED

2022-08-22 Giovanni Bechis <g.bechis@snb.it>

	* make more subs public

2022-08-07 Giovanni Bechis <g.bechis@snb.it>

	* make md_authres headers parsable by Mail::DKIM <= 0.54

2022-06-14 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.0 RELEASED

2022-05-24 Giovanni Bechis <g.bechis@snb.it>

	* add is_public_ip6_address to check if an ipv6 address
	  is local

2022-05-19 Giovanni Bechis <g.bechis@snb.it>

	* add md_authres method to generate a basic Authentication-Results
	  header for the message

2022-05-17 Giovanni Bechis <g.bechis@snb.it>

	* add md_arc_sign method to sign email messages
	  with DKIM ARC signatures

2022-05-12 Giovanni Bechis <g.bechis@snb.it>

	* add md_dkim_verify method to verify DKIM signatures

2022-05-03 Giovanni Bechis <g.bechis@snb.it>

	* add md_dkim_sign method to sign email messages
	  with DKIM signatures

2022-04-19 Giovanni Bechis <g.bechis@snb.it>

	* add anonymize_uri to remove utm_* parameters
	  from uris.
