@@ -18,6 +18,7 @@ mimedefang-notify.7
 mimedefang-protocol.7
 mimedefang.8
 mimedefang.pl
+mimedefang-release.pl
 mimedefang.pl.8
 modules/man/*.3p
 redhat/mimedefang-init
